# Project3

Lab3/: CMakeLists.txt  Databas.h  Database.h  Datalog.h  Interpreter.h  Parameter.h  Parser.h  Predicate.h  Relation.h  Rule.h  Scanner.h  Scheme.h  Token.h  Tuple.h  fart  main.cpp  test.txt
